--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,15 +2,15 @@
 {% block title %}Profile Page{% endblock title %}
 {% block content %}
 
-<style>   body {
+<!-- <style>   body {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/University_of_Virginia_seal.svg/800px-University_of_Virginia_seal.svg.png');
     background-size: cover;
     background-attachment: fixed;
     background-size: 15% 25%;
     background-color: orange;
-}</style>
+}</style> -->
 
-<body style="background-color:orange;">
+<body style="background-color:black;">
     <div class="form-content">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
