--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -100,10 +100,10 @@ input::placeholder {
      height="500" > -->
  <style>
         body {
-            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVf-WYzIJZBVN2HdGMTw4IP7RgSZ6udW_H5w&usqp=CAU');
+            background-image: url("https://api.time.com/wp-content/uploads/2015/04/university-virginia.jpg?quality=85&amp;w=4000");
             background-size: cover;
             background-attachment: fixed;
-            background-size: 25% 25%;
+            background-size: 100% 100%;
         }
     </style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
