--- a/templates/search_users_page.html
+++ b/templates/search_users_page.html
@@ -8,10 +8,10 @@
 <head >
 <style>
       body {
-            background-image: url('https://previews.123rf.com/images/denispc/denispc1903/denispc190300031/120256774-group-of-happy-cartoon-young-people-happy-friends-.jpg');
+            background-image: url("https://i.pinimg.com/736x/c3/cb/cc/c3cbcc35b6174df1d96f336781b6b6f6--black-backgrounds-maya.jpg");
             background-size: cover;
             background-attachment: fixed;
-            background-size: 25% 25%;
+            background-size: 100% 100%;
         }
         .button-9 {
   appearance: button;
