--- a/templates/search_users_results.html
+++ b/templates/search_users_results.html
@@ -14,14 +14,14 @@
         padding-top: 1em;
     }
 
-    body {
+    /* body {
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/University_of_Virginia_seal.svg/800px-University_of_Virginia_seal.svg.png');
             background-size: cover;
             background-attachment: fixed;
             background-size: 15% 25%;
             background-color: orange;
         }
-    
+     */
 </style>
     
 </head>
